# 100-exercises-to-learn-rust

./: Cargo.toml
exercises/01_intro/00_welcome/src/: lib.rs
exercises/02_basic_calculator/03_if_else/src/: lib.rs
exercises/02_basic_calculator/04_panics/src/: lib.rs
exercises/02_basic_calculator/05_factorial/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/02_basic_calculator/07_for/src/: lib.rs
exercises/02_basic_calculator/08_overflow/: Cargo.toml
exercises/02_basic_calculator/09_saturating/src/: lib.rs
exercises/02_basic_calculator/10_as_casting/src/: lib.rs
exercises/03_ticket_v1/01_struct/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
exercises/03_ticket_v1/06_ownership/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/09_heap/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/01_trait/src/: lib.rs
exercises/04_traits/02_orphan_rule/src/: lib.rs
exercises/04_traits/03_operator_overloading/src/: lib.rs
exercises/04_traits/04_derive/src/: lib.rs
exercises/04_traits/05_trait_bounds/src/: lib.rs
exercises/04_traits/07_deref/src/: lib.rs
exercises/04_traits/09_from/src/: lib.rs
exercises/04_traits/10_assoc_vs_generic/: Cargo.toml
exercises/05_ticket_v2/11_dependencies/: Cargo.toml
exercises/05_ticket_v2/12_thiserror/: Cargo.toml
exercises/05_ticket_v2/13_try_from/: Cargo.toml
exercises/05_ticket_v2/14_source/: Cargo.toml
exercises/05_ticket_v2/15_outro/: Cargo.toml
(+25 files in other folders)
