[package]
name = "overflow"
version = "0.1.0"
edition = "2021"

[lints.rust]
# We silence dead code warnings for the time being in order to reduce
# compiler noise.
# We'll re-enable them again once we explain how visibility works in Rust.
dead_code = "allow"
overflow-checks = "deny"

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false  